# ceo-agent-service

./: .env.example  .gitignore  .secrets.baseline  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  vercel.json
api/: dingtalk-feedback-spike-events.js  dingtalk-feedback-spike.js  feedback-storage.js
app/: agent_envelope.py  audit_security.py  audit_web.py  cli.py  codex_decision 2.py  codex_decision.py  codex_dev.py  codex_history.py  codex_memory_client.py  codex_memory_write.py  codex_runner.py  config 2.py  config.py  corpus 2.py  corpus.py  database_backup.py  developer_prompt 2.py  developer_prompt.py  dingtalk_models.py  dws_client.py  embedding.py  external_retry.py  feedback_bugfix.py  feedback_policy.py  feedback_spike.py  follow_up.py  history.py  leak_check.py  mcp_doctor.py  meeting_alignment.py  meeting_alignment_agent.py  meeting_alignment_delivery.py  meeting_alignment_models.py  meeting_alignment_source.py  memory_connector_auth.py  memory_connector_client.py  memory_setup.py  notification.py  oa_approval 2.py  oa_approval.py  (+27 more)
apps/local-service/: pyproject.toml  setup.py
apps/local-service/ceo_agent_service/: audit_web.py  cli.py  codex_decision.py  codex_history.py  codex_runner.py  config.py  corpus.py  developer_prompt.py  dingtalk_models.py  dws_client.py  leak_check.py  memory_connector.py  memory_events.py  memory_flush.py  notification.py  oa_approval.py  org_cache.py  permission.py  prompt.py  store.py  user_prompt_blocks.py  work_profile.py  worker.py
apps/local-service/ceo_agent_service/schemas/: codex_decision.schema.json  oa_approval.schema.json
apps/local-service/docs/: message-response-window.md  reply-worker-reliability.md
apps/local-service/tests/: conftest.py  test_audit_web.py  test_cli.py  test_codex_decision.py  test_codex_history.py  test_codex_runner.py  test_corpus.py  test_dws_client.py  test_hourly_dry_run_launchd.py  test_memory_connector.py  test_memory_events.py  test_memory_flush.py  test_notification.py  test_oa_approval.py  test_org_cache.py  test_permission.py  test_prompt.py  test_registry.py  test_store.py  test_work_profile.py  test_worker.py
apps/local-service/tests/e2e/: test_live_smoke.py  test_local_pipeline.py
data/: README.md
docs/: agent-installation-runbook.md  dws-capabilities.md  dws-command-inventory.md  dws-command-schema.snapshot.json  dws-exhaustive-command-reference.md  feishu-channel-operations.md  feishu-dingtalk-parity-plan.md  message-routing-rules.md  nvwa-work-profile-installation.md  product-logic.md  quality-system.md  reply-worker-reliability.md  universal-consumer-agent.md  wechat-channel-and-local-memory-research.md  wechat-channel-operations.md  work-profile-distillation-tutorial.md
launchd/: com.ceo-agent-service.audit-web.plist  com.ceo-agent-service.main.plist  com.ceo-agent-service.reply-consumer.plist  com.ceo-agent-service.reply-producer.plist  com.derek.ceo-agent-service.audit-web.plist  com.derek.ceo-agent-service.dry-run-consumer.plist  com.derek.ceo-agent-service.hourly-dry-run.plist  com.derek.ceo-agent-service.memory-flush.plist  com.derek.ceo-agent-service.reply-consumer.plist  com.derek.ceo-agent-service.reply-producer.plist  com.stardust.ceo-agent.wechat-reader.plist  com.stardust.ceo-agent.wechat-sender.plist
profiles/: derek_work_profile.json  derek_work_profile.md  work_profile.json  work_profile.md
prompts/: developer_prompt.md  style_profile 2.md  user_prompt 2.md  user_prompt.md
scripts/: backfill_follow_up_todo_ids.py  bootstrap-local-components.sh  (+20 more)
(+277 files in other folders)
