[project]
name = "ceo-agent-service"
version = "0.1.0"
description = "Local-first DingTalk executive auto-reply service"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "cryptography>=42",
  "fastapi>=0.115",
  "jieba>=0.42",
  "keyring>=25,<26",
  "mcp==1.28.1",
  "pypdf>=5.0",
  "pydantic>=2.10",
  "robust-json-parser>=0.1.6,<0.2",
  "uvicorn>=0.34"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28",
  "pytest>=8.3"
]
feishu = [
  "lark-channel-sdk==1.2.0",
  "lark-oapi==1.7.1"
]
reader-build = [
  "pyinstaller>=6.14,<7",
  "pyobjc-framework-ApplicationServices>=12,<13; sys_platform == 'darwin'",
  "pyobjc-framework-Cocoa>=12,<13; sys_platform == 'darwin'",
  "pyobjc-framework-Quartz>=12,<13; sys_platform == 'darwin'"
]

[project.scripts]
ceo-agent = "app.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "live: explicit opt-in tests that may call real dws, Codex, or DingTalk"
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
